force-app/main/default/objects/QuoteLineItem/fields/Offer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Offer_Reason__c</fullName>
    <label>Offer Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>