force-app/main/default/objects/QuoteLineItem/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE( &quot;/resource/&quot; + Product2.Product_Image_Link__c ,  Product2.Name)</formula>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>