force-app/main/default/objects/QuoteLineItem/fields/Product_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Link__c</fullName>
    <formula>Product2.Product_Image_Link__c</formula>
    <label>Product Image Link</label>
    <type>Text</type>
</CustomField>